--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "babel-preset-es2015": "^6.24.1",
   "babel-register": "^6.26.0",
   "babelify": "^7.3.0",
+  "bower": "^1.8.2",
   "eslint": "^4.9.0",
   "eslint-config-airbnb-base": "^12.1.0",
   "eslint-plugin-import": "^2.8.0",
