++ ELECTRON_IS_DEV

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,6 +9,7 @@
         "sourceType": "module"
     },
     "rules": {
+		"no-console": "off",
         "indent": [
             "error",
             "tab"
