Better file management

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "electron",
   "version": "1.0.0",
-  "main": "main.js",
+  "main": "app/main.js",
   "license": "MIT",
   "devDependencies": {
     "electron": "^1.7.9"
